--- a/index.html
+++ b/index.html
@@ -146,95 +146,39 @@
 </header><main>				
 	<table>
 <tr>
-<td><img><a href="https://youtu.be/rynGE7TI76s"><img src="http://img.youtube.com/vi/rynGE7TI76s/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/rynGE7TI76s">Seuk Cook!!</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/wg8I-HsRN3E"><img src="http://img.youtube.com/vi/wg8I-HsRN3E/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/wg8I-HsRN3E">[Pops in Seoul] STEP OUT! Stray Kids(스트레이 키즈) Members' Self-Introduction</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/vcm-i3WhMdw"><img src="http://img.youtube.com/vi/vcm-i3WhMdw/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/vcm-i3WhMdw">Sleepiness Prevention V LIVE Zzz</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/-LzlSgj_eWI"><img src="http://img.youtube.com/vi/-LzlSgj_eWI/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/-LzlSgj_eWI">Spring Time Outing</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/xn9au_wnf1Q"><img src="http://img.youtube.com/vi/xn9au_wnf1Q/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/xn9au_wnf1Q">Stray Kids "Mirror" Performance Video Teaser</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/wgmVUxtRWec"><img src="http://img.youtube.com/vi/wgmVUxtRWec/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/wgmVUxtRWec">[SPOT KIDS : BLACK] The wild and lively Stray Kids have appeared!</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/qXqs7vcE2wg"><img src="http://img.youtube.com/vi/qXqs7vcE2wg/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/qXqs7vcE2wg">SK-TALK TIME</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/rXEy8r5P_vc"><img src="http://img.youtube.com/vi/rXEy8r5P_vc/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/rXEy8r5P_vc">Stray Kids "Mirror" Performance Video</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/B0g4XRWyn7s"><img src="http://img.youtube.com/vi/B0g4XRWyn7s/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/B0g4XRWyn7s">SK-Talker 4</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/XPlfnq05zcI"><img src="http://img.youtube.com/vi/XPlfnq05zcI/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/XPlfnq05zcI">Mirror Fan Featuring Guide</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/1YmYscQJbk0"><img src="http://img.youtube.com/vi/1YmYscQJbk0/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/1YmYscQJbk0">[V COOKIE with Stray Kids] I am NOT Era: Stray Kids X LieV</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/HHZrmKlm4Jo"><img src="http://img.youtube.com/vi/HHZrmKlm4Jo/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/HHZrmKlm4Jo">Stray Kids "ROCK (돌)" Video (Street Ver.)</a></p></td>
-</tr>
-<tr>
-<td><img><a href="https://youtu.be/cUsQhwrKWUo"><img src="http://img.youtube.com/vi/cUsQhwrKWUo/default.jpg" alt="..." /></a>
-</td>
-</tr>
-<tr>
-<td><p><a href="https://youtu.be/cUsQhwrKWUo">Eat Bingsu with SKZ</a></p></td>
+<td><img><a href="https://youtu.be/9JS0xHsQ0aE"><img src="http://img.youtube.com/vi/9JS0xHsQ0aE/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/9JS0xHsQ0aE">Stray Kids admit they're Crazy [After_zzZ]</a></p></td>
+<td><img><a href="https://youtu.be/9ua0AM5fw9s"><img src="http://img.youtube.com/vi/9ua0AM5fw9s/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/9ua0AM5fw9s">Park Won's Kiss The Radio with Stray Kids (Lee Know, Hyunjin, Han, Felix, I.N)</a></p></td>
+<td><img><a href="https://youtu.be/fO8m5Q42VmI"><img src="http://img.youtube.com/vi/fO8m5Q42VmI/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/fO8m5Q42VmI">[SPOT KIDS : BLACK] Stray Kids Carefully Climbing Down the Ladder★</a></p></td>
+<td><img><a href="https://youtu.be/aFJdQkU_abo"><img src="http://img.youtube.com/vi/aFJdQkU_abo/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/aFJdQkU_abo">District 9: 9th EP. 04</a></p></td>
+<td><img><a href="https://youtu.be/5Wczhlt-N5E"><img src="http://img.youtube.com/vi/5Wczhlt-N5E/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/5Wczhlt-N5E">SPOT KIDS: BLACK Jacket behind #1</a></p></td>
+<td><img><a href="https://youtu.be/mUMFQpkXGy0"><img src="http://img.youtube.com/vi/mUMFQpkXGy0/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/mUMFQpkXGy0">SPOT KIDS: BLACK Jacket behind #2</a></p></td>
+<td><img><a href="https://youtu.be/Coeg8U3H8BM"><img src="http://img.youtube.com/vi/Coeg8U3H8BM/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/Coeg8U3H8BM">[SPOT KIDS : BLACK] Captured at Stray Kids' New Year's gift exchange!</a></p></td>
+<td><img><a href="https://youtu.be/ofGVt280wNU"><img src="http://img.youtube.com/vi/ofGVt280wNU/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/ofGVt280wNU">SPOT KIDS : BLACK - Stray Kids sharpshooter Hyunjin!</a></p></td>
+<td><img><a href="https://youtu.be/vP_X6CrWdDQ"><img src="http://img.youtube.com/vi/vP_X6CrWdDQ/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/vP_X6CrWdDQ">District 9: 9th EP. 01</a></p></td>
+<td><img><a href="https://youtu.be/oeABI7e-QKI"><img src="http://img.youtube.com/vi/oeABI7e-QKI/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/oeABI7e-QKI">District 9: 9th EP. 02</a></p></td>
+<td><img><a href="https://youtu.be/7dOrTKO3NFI"><img src="http://img.youtube.com/vi/7dOrTKO3NFI/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/7dOrTKO3NFI">[SPOT KIDS : BLACK] 추위를 이겨내고 있는 Stray Kids!</a></p></td>
+<td><img><a href="https://youtu.be/dfzjQaIiLpw"><img src="http://img.youtube.com/vi/dfzjQaIiLpw/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/dfzjQaIiLpw">District 9: 9th EP. 03</a></p></td>
+<td><img><a href="https://youtu.be/Q2mk1EcZdi0"><img src="http://img.youtube.com/vi/Q2mk1EcZdi0/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/Q2mk1EcZdi0">SPOT KIDS : HYUNJIN is so into GOT7's Jinyoung</a></p></td>
+<td><img><a href="https://youtu.be/mc99KklyvqQ"><img src="http://img.youtube.com/vi/mc99KklyvqQ/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/mc99KklyvqQ">SPOT KIDS : Chan vs Felix's exciting arm wrestling match</a></p></td>
+<td><img><a href="https://youtu.be/-dB3FNZ491E"><img src="http://img.youtube.com/vi/-dB3FNZ491E/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/-dB3FNZ491E">SPOT KIDS : SEUNGMIN vs I N's neck and neck arm wrestling match!</a></p></td>
+<td><img><a href="https://youtu.be/TnCNvEW1SWo"><img src="http://img.youtube.com/vi/TnCNvEW1SWo/default.jpg" alt="..." /></a>
+<p><a href="https://youtu.be/TnCNvEW1SWo">SPOT KIDS : CHAN vs SEUNGMIN's arm wrestling final</a></p></td>
+
 </tr>
 </table>
 	</main>	
